{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 275,
  "lineage": "a33f5a3b-d442-0d84-0c46-002dd7dc4f6a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-01ee8bd080cb3a41b",
            "arn": "arn:aws:ec2:ap-south-1:023675714391:instance/i-02e22ae653cf4c99b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "CloudWatch_SSM_role",
            "id": "i-02e22ae653cf4c99b",
            "instance_id": "i-02e22ae653cf4c99b",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "key_name": "Accelerator-6",
            "launch_time": "2024-05-22T12:41:16Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-07ab11c3e962f8fbc",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-1-139.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-13-201-60-109.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.60.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:023675714391:key/57b3a8de-a38b-4a7a-96a3-8414679a52e4",
                "tags": {
                  "CreatedBy": "Terraform",
                  "Enviroment": "Dev",
                  "Owner": "Rushikesh",
                  "Project": "Terra POC"
                },
                "throughput": 0,
                "volume_id": "vol-0d5ca52b3bc71e143",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0493d5450ff065a31",
            "tags": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Name": "AppServer",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06501a855597b0b2f"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023675714391:route-table/rtb-04cf502cdb2b31f44",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0c206a5e546c51f1f",
                "route_table_id": "rtb-04cf502cdb2b31f44",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-04629e229139b76f7"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-04cf502cdb2b31f44",
            "owner_id": "023675714391",
            "route_table_id": "rtb-04cf502cdb2b31f44",
            "routes": [],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04629e229139b76f7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "Public-RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023675714391:route-table/rtb-04cf502cdb2b31f44",
            "default_route_table_id": "rtb-04cf502cdb2b31f44",
            "id": "rtb-04cf502cdb2b31f44",
            "owner_id": "023675714391",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059cecb809e1d99b7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Name": "PublicRouteTable",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-04629e229139b76f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc",
            "data.aws_route_table.main_route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01ee8bd080cb3a41b",
            "arn": "arn:aws:ec2:ap-south-1:023675714391:instance/i-02e22ae653cf4c99b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CloudWatch_SSM_role",
            "id": "i-02e22ae653cf4c99b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "Accelerator-6",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ab11c3e962f8fbc",
            "private_dns": "ip-10-0-1-139.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-13-201-60-109.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.60.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:023675714391:key/57b3a8de-a38b-4a7a-96a3-8414679a52e4",
                "tags_all": {
                  "CreatedBy": "Terraform",
                  "Enviroment": "Dev",
                  "Owner": "Rushikesh",
                  "Project": "Terra POC"
                },
                "throughput": 0,
                "volume_id": "vol-0d5ca52b3bc71e143",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0493d5450ff065a31",
            "tags": {
              "Name": "AppServer"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Name": "AppServer",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06501a855597b0b2f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs",
            "data.aws_ssm_parameter.webserver-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023675714391:internet-gateway/igw-059cecb809e1d99b7",
            "id": "igw-059cecb809e1d99b7",
            "owner_id": "023675714391",
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "vpc_id": "vpc-04629e229139b76f7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "client_keep_alive": 3600,
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:023675714391:loadbalancer/app/terraformALB/4514e801edcc0304",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "terraformALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-022d138cebf775b30"
            ],
            "subnets": [
              "subnet-019351b6eac487732",
              "subnet-0493d5450ff065a31"
            ],
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "xff_header_processing_mode": "append"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public-subnet",
            "aws_subnet.public-subnet-b",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:023675714391:targetgroup/ALBTargetGroup/ceb240104b2b23e7",
            "arn_suffix": "targetgroup/ALBTargetGroup/ceb240104b2b23e7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:023675714391:targetgroup/ALBTargetGroup/ceb240104b2b23e7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALBTargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04629e229139b76f7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023675714391:route-table/rtb-08e4b3edc6ccd4725",
            "id": "rtb-08e4b3edc6ccd4725",
            "owner_id": "023675714391",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Name": "PrivateRouteTable",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-04629e229139b76f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034cf442f049398c6",
            "route_table_id": "rtb-08e4b3edc6ccd4725",
            "subnet_id": "subnet-007f54676a8bdd3fe"
          },
          "dependencies": [
            "aws_route_table.Private-RouteTable",
            "aws_subnet.private-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ea3dba6273c7f83",
            "route_table_id": "rtb-08e4b3edc6ccd4725",
            "subnet_id": "subnet-096c76ca738a75f8d"
          },
          "dependencies": [
            "aws_route_table.Private-RouteTable",
            "aws_subnet.private-subnet-b",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023675714391:security-group/sg-022d138cebf775b30",
            "description": "Allow TCP/80 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022d138cebf775b30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from TCP/80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AlbServerSG",
            "name_prefix": "",
            "owner_id": "023675714391",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AlbServerSG"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Name": "AlbServerSG",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-04629e229139b76f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lauch-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023675714391:security-group/sg-0b2eed4034ca88f9d",
            "description": "Allow TCP/80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2eed4034ca88f9d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from TCP/80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022d138cebf775b30"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "LaunchSecurityGroup",
            "name_prefix": "",
            "owner_id": "023675714391",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LaunchSecurityGroup"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Name": "LaunchSecurityGroup",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-04629e229139b76f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023675714391:security-group/sg-06501a855597b0b2f",
            "description": "Allow TCP/80 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06501a855597b0b2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AppServerSg",
            "name_prefix": "",
            "owner_id": "023675714391",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AppServerSg"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Name": "AppServerSg",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-04629e229139b76f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023675714391:subnet/subnet-007f54676a8bdd3fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007f54676a8bdd3fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023675714391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PriavteSubnet-1A"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Name": "PriavteSubnet-1A",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "vpc_id": "vpc-04629e229139b76f7"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023675714391:subnet/subnet-096c76ca738a75f8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096c76ca738a75f8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023675714391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PriavteSubnet-1B"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Name": "PriavteSubnet-1B",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "vpc_id": "vpc-04629e229139b76f7"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023675714391:subnet/subnet-0493d5450ff065a31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0493d5450ff065a31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023675714391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-1A"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Name": "PublicSubnet-1A",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "vpc_id": "vpc-04629e229139b76f7"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023675714391:subnet/subnet-019351b6eac487732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019351b6eac487732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023675714391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-1B"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Name": "PublicSubnet-1B",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            },
            "vpc_id": "vpc-04629e229139b76f7"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:023675714391:vpc/vpc-04629e229139b76f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f6cb5c09333e621",
            "default_route_table_id": "rtb-04cf502cdb2b31f44",
            "default_security_group_id": "sg-0afbf9b28e0fa6fa8",
            "dhcp_options_id": "dopt-09a73ededfd4c5c84",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04629e229139b76f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04cf502cdb2b31f44",
            "owner_id": "023675714391",
            "tags": {
              "Name": "TerraformVPC"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Enviroment": "Dev",
              "Name": "TerraformVPC",
              "Owner": "Rushikesh",
              "Project": "Terra POC"
            }
          }
        }
      ]
    }
  ]
}